RESOLVED FIXED290890
Invalidate element when added as touch event handler
https://bugs.webkit.org/show_bug.cgi?id=290890
Summary Invalidate element when added as touch event handler
Nikos Mouchtaris
Reported 2025-04-01 17:00:51 PDT
Invalidate element when added as touch event handler
Attachments
Radar WebKit Bug Importer
Comment 1 2025-04-01 17:11:04 PDT
Nikos Mouchtaris
Comment 2 2025-04-01 17:13:28 PDT
EWS
Comment 3 2025-04-02 12:31:37 PDT
Committed 293116@main (54b4cdcf9f5c): <https://commits.webkit.org/293116@main> Reviewed commits have been landed. Closing PR #43434 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.