Invalidate element when added as touch event handler https://bugs.webkit.org/show_bug.cgi?id=290890 rdar://148383228

Reviewed by Simon Fraser.

When an element is added as a touch event handler, we need to invalidate it so that we
can run the style adjuster code at the proper time to make sure the correct
EventListenerRegionType flags are set on the style.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::didAddTouchEventHandler):

Canonical link: https://commits.webkit.org/293116@main